# FPGA_CPU

./: FPGA_CPU.tcl  FPGA_CPU.xpr  README.md
Assembler/: CMakeLists.txt  README_Assembler.md  instruction.cpp  instruction.h  main.cpp  op_codes.h  program.asm  program.cpp  program.h
Assembler/headers/: compiler.h  instruction.h  op_codes.h  program.h  uart_transmitter.h
Assembler/src/: compiler.cpp  instruction.cpp  program.cpp  uart_transmitter.cpp
Compiler/: CMakeLists.txt  README_Compiler.md  documentation.md  grammar.md  lexer.cpp  lexer.h  main.cpp
Compiler/headers/: IR_generator.h  parser.h  tokenizer.h
Compiler/headers/node_types/: assignment_node.h  ast_node.h  ast_node_types.h  binary_expression_node.h  declaration_node.h  expression_node.h  function_call_node.h  function_node.h  if_node.h  number_node.h  parameter_node.h  program_node.h  return_node.h  scope_node.h  statement_node.h  unary_expression_node.h  variable_node.h  while_node.h
Compiler/src/: IR_generator.cpp  parser.cpp  tokenizer.cpp
FPGA_CPU.cache/sim/: ssm.db
FPGA_CPU.sim/sim_1/behav/xsim/: compile.bat  elaborate.bat  simulate.bat
FPGA_CPU.srcs/sources_1/new/: data_memory.sv  instruction_decoder.sv  op_codes.vh
FPGA_CPU_Vivado/: FPGA_CPU.tcl  FPGA_CPU.xpr  operating_system_behav.wcfg  vivado.jou
FPGA_CPU_Vivado/FPGA_CPU.cache/wt/: synthesis.wdf  webtalk_pa.xml
FPGA_CPU_Vivado/FPGA_CPU.gen/sources_1/bd/design_1/: design_1.bxml
FPGA_CPU_Vivado/FPGA_CPU.hw/hw_1/: hw.xml
FPGA_CPU_Vivado/FPGA_CPU.ip_user_files/sim_scripts/design_1/activehdl/: design_1.sh
FPGA_CPU_Vivado/FPGA_CPU.ip_user_files/sim_scripts/design_1/modelsim/: design_1.sh
FPGA_CPU_Vivado/FPGA_CPU.runs/.jobs/: vrs_config_8.xml
FPGA_CPU_Vivado/FPGA_CPU.runs/impl_1/: .phys_opt_design.begin.rst  .route_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  clockInfo.txt  gen_run.xml  htr.txt  init_design.pb  operating_system.bit  operating_system.tcl  operating_system.vdi  operating_system_bus_skew_routed.rpt  operating_system_bus_skew_routed.rpx  operating_system_clock_utilization_routed.rpt  operating_system_control_sets_placed.rpt  operating_system_drc_opted.rpt  operating_system_drc_opted.rpx  operating_system_drc_routed.rpt  operating_system_drc_routed.rpx  operating_system_io_placed.rpt  operating_system_methodology_drc_routed.pb  operating_system_methodology_drc_routed.rpt  operating_system_methodology_drc_routed.rpx  operating_system_opt.dcp  operating_system_physopt.dcp  operating_system_placed.dcp  operating_system_power_routed.rpt  operating_system_power_routed.rpx  operating_system_power_summary_routed.pb  operating_system_route_status.pb  operating_system_route_status.rpt  operating_system_routed.dcp  operating_system_timing_summary_routed.pb  operating_system_timing_summary_routed.rpt  operating_system_timing_summary_routed.rpx  operating_system_utilization_placed.pb  operating_system_utilization_placed.rpt  opt_design.pb  phys_opt_design.pb  place_design.pb  (+7 more)
FPGA_CPU_Vivado/FPGA_CPU.runs/synth_1/: .vivado.begin.rst  gen_run.xml  htr.txt  operating_system.dcp  operating_system.tcl  operating_system.vds  operating_system_utilization_synth.pb  operating_system_utilization_synth.rpt  rundef.js  runme.sh  vivado.jou  vivado.pb
FPGA_CPU_Vivado/FPGA_CPU.runs/synth_1/.Xil/: operating_system_propImpl.xdc
FPGA_CPU_Vivado/FPGA_CPU.srcs/constrs_1/new/: constraints.xdc
FPGA_CPU_Vivado/FPGA_CPU.srcs/sources_1/new/: ALU.sv  CPU.sv  FPU.sv  FPU_operations.sv  data_memory.sv  instruction_decoder.sv  instruction_memory.sv  op_codes.vh  operating_system.sv  program_memory.sv  serial_receiver.sv  serial_transmitter.sv  stack.sv
(+66 files in other folders)
